// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDescribedFormGroup is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescribedFormGroup testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    gutterSize="l"
  >
    <EuiFlexItem>
      <EuiTitle
        className="euiDescribedFormGroup__title"
        id="generated-id-title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props description is not rendered when it's not provided 1`] = `
<div
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescribedFormGroup testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    gutterSize="l"
  >
    <EuiFlexItem>
      <EuiTitle
        className="euiDescribedFormGroup__title"
        id="generated-id-title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props fullWidth is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescribedFormGroup euiDescribedFormGroup--fullWidth testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    gutterSize="l"
  >
    <EuiFlexItem>
      <EuiTitle
        className="euiDescribedFormGroup__title"
        id="generated-id-title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props gutterSize is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescribedFormGroup testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    gutterSize="s"
  >
    <EuiFlexItem>
      <EuiTitle
        className="euiDescribedFormGroup__title"
        id="generated-id-title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props titleSize is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescribedFormGroup testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    gutterSize="l"
  >
    <EuiFlexItem>
      <EuiTitle
        className="euiDescribedFormGroup__title"
        id="generated-id-title"
        size="l"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--large"
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup ties together parts for accessibility 1`] = `
<EuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  fullWidth={false}
  gutterSize="l"
  idAria="test-id"
  title={
    <h3>
      Title
    </h3>
  }
  titleSize="xs"
>
  <div
    aria-describedby={null}
    aria-label="aria-label"
    aria-labelledby="test-id-title"
    className="euiDescribedFormGroup testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <EuiFlexGroup
      gutterSize="l"
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            <EuiTitle
              className="euiDescribedFormGroup__title"
              id="test-id-title"
              size="xs"
            >
              <h3
                className="euiTitle euiTitle--xsmall euiDescribedFormGroup__title"
                id="test-id-title"
              >
                Title
              </h3>
            </EuiTitle>
            <EuiText
              className="euiDescribedFormGroup__description"
              color="subdued"
              id="test-id"
              size="s"
            >
              <div
                className="euiText euiText--small euiDescribedFormGroup__description"
                id="test-id"
              >
                <EuiTextColor
                  color="subdued"
                  component="div"
                >
                  <div
                    className="euiTextColor euiTextColor--subdued"
                  >
                    Test description
                  </div>
                </EuiTextColor>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          className="euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
        >
          <div
            className="euiFlexItem euiDescribedFormGroup__fields euiDescribedFormGroup__fieldPadding--xsmall"
          >
            <EuiFormRow
              describedByIds={
                Array [
                  "test-id",
                ]
              }
              display="row"
              error={
                Array [
                  "Error one",
                  "Error two",
                ]
              }
              fullWidth={false}
              hasChildLabel={true}
              hasEmptyLabelSpace={false}
              helpText="Help text"
              isInvalid={true}
              label="Label"
              labelType="label"
            >
              <div
                className="euiFormRow"
              >
                <div
                  className="euiFormRow__labelWrapper"
                >
                  <EuiFormLabel
                    aria-invalid={true}
                    className="euiFormRow__label"
                    htmlFor="generated-id"
                    isFocused={false}
                    isInvalid={true}
                    type="label"
                  >
                    <label
                      aria-invalid={true}
                      className="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
                      htmlFor="generated-id"
                    >
                      Label
                    </label>
                  </EuiFormLabel>
                </div>
                <div
                  className="euiFormRow__fieldWrapper"
                >
                  <input
                    aria-describedby="test-id generated-id-help generated-id-error-0 generated-id-error-1"
                    id="generated-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  />
                  <EuiFormErrorText
                    className="euiFormRow__text"
                    id="generated-id-error-0"
                    key="Error one"
                  >
                    <div
                      aria-live="polite"
                      className="euiFormErrorText euiFormRow__text"
                      id="generated-id-error-0"
                    >
                      Error one
                    </div>
                  </EuiFormErrorText>
                  <EuiFormErrorText
                    className="euiFormRow__text"
                    id="generated-id-error-1"
                    key="Error two"
                  >
                    <div
                      aria-live="polite"
                      className="euiFormErrorText euiFormRow__text"
                      id="generated-id-error-1"
                    >
                      Error two
                    </div>
                  </EuiFormErrorText>
                  <EuiFormHelpText
                    className="euiFormRow__text"
                    id="generated-id-help"
                  >
                    <div
                      className="euiFormHelpText euiFormRow__text"
                      id="generated-id-help"
                    >
                      Help text
                    </div>
                  </EuiFormHelpText>
                </div>
              </div>
            </EuiFormRow>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </div>
</EuiDescribedFormGroup>
`;
